--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compilevnr-plugin</artifactId>
+                <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
                 <configuration>
                     <source>1.8</source>
